--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,13 +40,45 @@ header {
     transform: scale(1.1); /* Небольшое увеличение при наведении */
 }
 
-.user-avatar{
+.user-avatar {
     width: 40px;
     height: 40px;
     margin-left: 55px;
 }
 
+main {
+    width: 928px; 
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+.font-size-48 {
+    font-size: 48px;
+}
+
+.font-size-24 {
+    font-size: 24px;
+}
+
+.font-size-16 {
+    font-size: 16px;
+}
+
+.icon-size {
+    width: 24px; 
+    height: 24px;
+}
+
 /* === Стили карусели преимущес === */
+
+#CarouselProperties{
+    margin-top: 40px
+}
+
+.radius-image{
+    border-radius: 12px;
+}
+
 .carousel-indicators > button {
     border-radius: 50%;
     width: 8px !important;
@@ -126,6 +158,10 @@ textarea.form-control {
     height: 120px;
 }
 
+#questionInput {
+    height: 150px;
+}
+
 /* === Карусель отзывов === */
 #testimonialCarousel .card {
     width: 100%;
@@ -168,7 +204,12 @@ textarea.form-control {
     color: #6c757d;
 }
 
-/* === Стрелки навигации для карусели === */
+/* Стрелки навигации для карусели */
+.arrow-size {
+    width:43.75px; 
+    height:28.13px;
+}
+
 .carousel-control-prev,
 .carousel-control-next {
     top: 10px;
@@ -222,7 +263,17 @@ textarea.form-control {
     right: 0;
 }
 
+/* === Контактная информация === */
+.map-size {
+    width: 100%;
+    height:320px;
+}
+
 /* === Стили для footer === */
+footer {
+    height: 197px;
+}
+
 .footer-link {
     color: inherit;
     text-decoration: none;
