--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -294,6 +294,39 @@ footer {
     color: inherit;
 }
 
+/* Общие стили для кнопок */
+.fix-button {
+    width: 50px;
+    height: 50px;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    border-radius: 50%; /* Делает кнопку круглой */
+    border: 1px solid black; /* Черная рамка */
+}
+
+/* Специфичные стили для каждой кнопки */
+.btn-up {
+    bottom: 0;
+    right: 0;
+    margin-bottom: 16px; /* Расстояние от низа */
+    margin-right: 16px;  /* Расстояние от правого края */
+    background-color: white;
+    border-color: black; /* Черная рамка */
+}
+
+.btn-whatsapp {
+    bottom: 0;
+    right: 0;
+    margin-bottom: 72px; /* Расстояние от низа, чтобы кнопка "Вверх" не перекрывала */
+    margin-right: 16px;  /* Расстояние от правого края */
+    background-color: green;
+    border-color: black; /* Черная рамка */
+}
+
+
 /* === Медиа-запросы для мобильных устройств === */
 @media (max-width: 480px) {
     header {
