Добавлена маска ввода номера телефона

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,11 +2,11 @@
     <div class="container-fluid d-flex justify-content-between align-items-center px-3">
         <!-- Логотип -->
         <h1 class="h4 d-flex align-items-center m-0">
-            <img src="../assets/logo.svg" alt="logo" class="logo-img">
+            <img src="../assets/logo.svg" alt="Логотип" class="logo-img"> <!-- Альтернативный текст для логотипа -->
             Глобус
         </h1>
         
-        <!-- Чекбокс для управления меню (только для мобильных) -->
+        <!-- Чекбокс для управления мобильным меню -->
         <input type="checkbox" id="menuCheckbox" class="menu-checkbox d-lg-none">
         
         <!-- Метка для чекбокса (иконка меню для мобильных) -->
@@ -21,7 +21,7 @@
         </div>
 
         <!-- Аватар пользователя для десктопов -->
-        <img src="../assets/images/example-avatars/avatar-man1.png" class="rounded-circle user-avatar d-none d-lg-inline" alt="Avatar" />
+        <img src="../assets/images/example-avatars/avatar-man1.png" class="rounded-circle user-avatar d-none d-lg-inline" alt="Аватар пользователя" />
 
         <!-- Мобильное меню, видимое только на мобильных -->
         <div class="mobile-nav d-lg-none">
