--- a/src/html/partials/travelAdvice.html
+++ b/src/html/partials/travelAdvice.html
@@ -27,6 +27,7 @@
                         <input 
                             type="tel" 
                             id="phoneInput" 
+                            name="phoneInput"
                             class="form-control" 
                             placeholder="+7 (___) ___-__-__" 
                             required 
