Добавлены предупреждение, что сайт полностью демонстрационный

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -29,7 +29,7 @@
 
         <!-- Третья строка: авторские права -->
         <div class="text-center">
-            <p class="mb-0">© 2024 Глобус</p>
+            <p class="mb-0">© 2024 Глобус — учебный проект.</p>
         </div>
     </div>
 </footer>
