--- a/src/html/partials/privacyModal.html
+++ b/src/html/partials/privacyModal.html
@@ -7,6 +7,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
             </div>
             <div class="modal-body">
+                <p>Сайт создан исключительно для демонстрации. Личные данные пользователей не собираются и не обрабатываются.</p>
+
                 <h6>1. Введение</h6>
                 <p>
                     Мы понимаем важность защиты вашей конфиденциальности и стремимся обеспечить безопасность ваших персональных данных. 
